src/checks/level2/copyable-polymorphic.cpp
@@ -42,18 +42,37 @@ using namespace std;
 
 
 /// Returns whether the class has non-private copy-ctor or copy-assign
-static bool hasNonPrivateCopy(const CXXRecordDecl *record)
+static bool hasPublicCopy(const CXXRecordDecl *record)
 {
     CXXConstructorDecl *copyCtor = Utils::copyCtor(record);
-    const bool hasCallableCopyCtor = copyCtor && !copyCtor->isDeleted() && copyCtor->getAccess() != clang::AS_private;
+    const bool hasCallableCopyCtor = copyCtor && !copyCtor->isDeleted() && copyCtor->getAccess() == clang::AS_public;
     if (!hasCallableCopyCtor) {
         CXXMethodDecl *copyAssign = Utils::copyAssign(record);
-        const bool hasCallableCopyAssign = copyAssign && !copyAssign->isDeleted() && copyAssign->getAccess() != clang::AS_private;
+        const bool hasCallableCopyAssign = copyAssign && !copyAssign->isDeleted() && copyAssign->getAccess() == clang::AS_public;
         if (!hasCallableCopyAssign)
             return false;
     }
 
     return true;
+}
+
+/// Checks if there's any base class with public copy
+static bool hasPublicCopyInAncestors(const CXXRecordDecl *record)
+{
+    if (!record)
+        return false;
+
+    for (auto base : record->bases()) {
+        if (const Type *t = base.getType().getTypePtrOrNull()) {
+            CXXRecordDecl *baseRecord = t->getAsCXXRecordDecl();
+            if (hasPublicCopy(baseRecord))
+                return true;
+            if (hasPublicCopyInAncestors(t->getAsCXXRecordDecl()))
+                return true;
+        }
+    }
+
+    return false;
 }
 
 CopyablePolymorphic::CopyablePolymorphic(const std::string &name, ClazyContext *context)
@@ -68,8 +87,13 @@ void CopyablePolymorphic::VisitDecl(clang::Decl *decl)
     if (!record || !record->hasDefinition() || record->getDefinition() != record || !record->isPolymorphic())
         return;
 
-    if (!hasNonPrivateCopy(record))
+    if (!hasPublicCopy(record))
         return;
+
+    if (record->isEffectivelyFinal() && !hasPublicCopyInAncestors(record)) {
+        // If the derived class is final, and all the base classes copy-ctors are protected or private then it's ok
+        return;
+    }
 
     emitWarning(clazy::getLocStart(record), "Polymorphic class " + record->getQualifiedNameAsString() + " is copyable. Potential slicing.", fixits(record));
 }
